<resources>
    <string name="app_name">Calculator</string>

    <!--Digits-->
    <string name="dot">.</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <!--Operations-->
    <string name="add">&#43;</string>
    <string name="subtract">&#8722;</string>
    <string name="multiply">&#215;</string>
    <string name="divide">&#247;</string>
    <string name="percent">%</string>
    <string name="equal">&#61;</string>

    <string name="all_clear">AC</string>
    <string name="backspace_icon">Backspace Icon</string>

</resources>